--- a/app/src/main/res/layout/fragment_upload_options_prescription.xml
+++ b/app/src/main/res/layout/fragment_upload_options_prescription.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -25,6 +24,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/work_sans_semibold"
             android:gravity="center_horizontal"
+            android:padding="4dp"
             android:text="Upload Prescription"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
