--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -151,7 +151,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/mycartrecycleview"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:padding="4dp">
 
             </androidx.recyclerview.widget.RecyclerView>
