--- a/app/src/main/res/layout/address_card.xml
+++ b/app/src/main/res/layout/address_card.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -46,10 +45,10 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Edit"
-                android:textColor="@color/teal_200"
+                android:text="Delete"
+                android:textColor="@color/red_900"
                 android:textStyle="bold"
-                app:strokeColor="@color/teal_200" />
+                app:strokeColor="@color/red_500" />
 
         </LinearLayout>
 
