--- a/app/src/main/res/layout/activity_your_order_confirmed.xml
+++ b/app/src/main/res/layout/activity_your_order_confirmed.xml
@@ -2,39 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout14"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".YourOrders.YourOrderConfirmedActivity"
-    android:orientation="vertical"
     android:gravity="center"
-    >
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@color/red_900"/>
-    <TextView
+    android:orientation="vertical"
+    tools:context=".YourOrders.YourOrderConfirmedActivity">
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
         android:layout_width="match_parent"
+        android:layout_height="180dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="false"
+        app:lottie_url="https://assets10.lottiefiles.com/packages/lf20_txJcSM.json" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView14"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24dp"
-        android:text="Your Order is Initiated"
         android:gravity="center"
-        android:layout_marginTop="10sp"
-        android:layout_marginBottom="150dp"/>
+        android:text="Your Order is Initiated"
+        android:textSize="24sp" />
 
-    <ImageView
-        android:layout_width="100sp"
-        android:layout_height="100dp"
-        android:src="@color/black"
-
-        />
-    <TextView
-        android:layout_width="match_parent"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/imageView8"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home"
-        android:textSize="24dp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:gravity="center"/>
+        android:layout_marginTop="20dp"
+        android:adjustViewBounds="true"
+        android:scaleType="center"
+        app:srcCompat="@drawable/ic_round_home_24"
+        tools:srcCompat="@drawable/ic_round_home_24" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textView15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Home"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
