--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/main_activity">
+    <com.alan.alansdk.button.AlanButton
+        android:id="@+id/alan_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:visibility="visible"
+        app:button_horizontal_align="right"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingBottom="100dp"/>
 
     <androidx.core.widget.NestedScrollView
+        android:contentDescription="Nested"
         android:id="@+id/nestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -50,9 +61,12 @@
         android:id="@+id/fab_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/AttachedPrescription"
         android:src="@drawable/upload_file_24"
         app:elevation="9dp"
         app:layout_anchor="@id/bottomAppBar"
-        app:layout_anchorGravity="bottom"/>
+        app:layout_anchorGravity="bottom"
+        tools:ignore="ImageContrastCheck" />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
