--- a/app/src/main/res/layout/confirmorder_card.xml
+++ b/app/src/main/res/layout/confirmorder_card.xml
@@ -103,7 +103,7 @@
                         android:visibility="invisible" />
 
                     <TextView
-                        android:id="@+id/quantitynumber"
+                        android:id="@+id/quantitynumber12"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:ems="2"
