--- a/app/src/main/res/layout/activity_your_order_confirmed.xml
+++ b/app/src/main/res/layout/activity_your_order_confirmed.xml
@@ -26,7 +26,7 @@
         android:textSize="24sp" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/imageViewtoHome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
