--- a/app/src/main/res/layout/orderprescription.xml
+++ b/app/src/main/res/layout/orderprescription.xml
@@ -85,8 +85,11 @@
             android:textAlignment="textStart"
             android:textAllCaps="false"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <com.google.android.material.button.MaterialButton
+        <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -102,7 +105,7 @@
             android:textColor="@android:color/black"
             app:cornerRadius="2dp" />
 
-        <com.google.android.material.button.MaterialButton
+        <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -116,6 +119,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@android:color/black"
             app:cornerRadius="2dp" />
+        </RadioGroup>
 
     </LinearLayout>
 
@@ -183,8 +187,8 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 app:srcCompat="@drawable/validate_rx" />
 
         </androidx.cardview.widget.CardView>
