--- a/app/src/main/res/layout/fragment_edit_address.xml
+++ b/app/src/main/res/layout/fragment_edit_address.xml
@@ -102,7 +102,7 @@
                 app:hintTextColor="@color/teal_200">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/pincode"
+                    android:id="@+id/pincode123"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/roboto_regular"
