--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Confirm_Order_Activity">
+    tools:context=".OrderReviewActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar6"
