--- a/app/src/main/res/layout/your_orders_card.xml
+++ b/app/src/main/res/layout/your_orders_card.xml
@@ -32,6 +32,7 @@
                 android:text="Date:- 05/01/2022" />
 
             <TextView
+                android:id="@+id/orderId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Order No-"
@@ -39,6 +40,7 @@
 
                 />
             <TextView
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Tracking id"
@@ -54,6 +56,7 @@
                     android:background="@color/transparent"
                     android:textColor="@color/black"/>
                 <TextView
+                    android:id="@+id/stat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Pending"
