--- a/app/src/main/res/layout/fragment_search_medicine.xml
+++ b/app/src/main/res/layout/fragment_search_medicine.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".search_medicine">
+    tools:context=".search_medicine"
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -29,34 +30,49 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.core.widget.NestedScrollView
+<!--    <androidx.core.widget.NestedScrollView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:orientation="vertical"-->
+<!--            android:id="@+id/search_view_bar"-->
+<!--            android:background="@color/white"-->
+<!--            >-->
+
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/searchrecyleview"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:screenReaderFocusable="true"-->
+<!--                android:scrollbarAlwaysDrawVerticalTrack="true"-->
+<!--                android:scrollbarSize="10sp"-->
+<!--                android:scrollbarStyle="insideInset"-->
+
+<!--                android:layout_height="wrap_content"-->
+<!--                android:alwaysDrawnWithCache="true" />-->
+
+
+<!--        </LinearLayout>-->
+
+<!--    </androidx.core.widget.NestedScrollView>-->
+
+    <!--            <androidx.recyclerview.widget.RecyclerView-->
+    <!--                android:id="@+id/searchrecyleview"-->
+    <!--                android:layout_width="match_parent"-->
+    <!--                android:screenReaderFocusable="true"-->
+    <!--                android:scrollbarAlwaysDrawVerticalTrack="true"-->
+    <!--                android:scrollbarSize="10sp"-->
+    <!--                android:scrollbarStyle="insideInset"-->
+
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:alwaysDrawnWithCache="true" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/searchrecyleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+        />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:id="@+id/search_view_bar"
-            android:background="@color/white"
-            >
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/searchrecyleview"
-                android:layout_width="match_parent"
-                android:screenReaderFocusable="true"
-                android:scrollbarAlwaysDrawVerticalTrack="true"
-                android:scrollbarSize="10sp"
-                android:scrollbarStyle="insideInset"
-
-                android:layout_height="wrap_content"
-                android:alwaysDrawnWithCache="true" />
-
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
