--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -148,11 +148,11 @@
 
             <!--            </androidx.cardview.widget.CardView>-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/mycartrecycleview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="4dp">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/mycartrecycleview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp">
 
             </androidx.recyclerview.widget.RecyclerView>
 
