--- a/app/src/main/res/layout/activity_all_products.xml
+++ b/app/src/main/res/layout/activity_all_products.xml
@@ -13,6 +13,16 @@
         android:layout_marginBottom="70dp"
         />
 
+    <ProgressBar
+        android:id="@+id/pbarAllProducts"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toBottomOf="@+id/allproductrecycleview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
