--- a/app/src/main/res/layout/fragment_address_book.xml
+++ b/app/src/main/res/layout/fragment_address_book.xml
@@ -37,6 +37,14 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         app:srcCompat="@drawable/ic_round_add_24" />
+    <TextView
+        android:id="@+id/noAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="No Adddress Available"
+        android:textSize="22dp"
+        android:layout_gravity="center"
+        android:gravity="center"/>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
