--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -54,13 +54,12 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_next"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/next"
         android:textColor="@color/black"
-        android:textSize="17sp"
         android:visibility="visible"
         app:icon="@drawable/ic_baseline_navigate_next_24"
         app:iconGravity="textEnd"
@@ -71,13 +70,12 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_Continue"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@android:color/transparent"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/conti"
         android:textColor="@color/black"
-        android:textSize="17sp"
         android:visibility="invisible"
         app:icon="@drawable/ic_baseline_navigate_next_24"
         app:iconGravity="textEnd"
