--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -75,7 +75,7 @@
                 android:background="@drawable/ic_baseline_circle_24"
                 android:elevation="6sp"
                 android:ellipsize="middle"
-                android:text="1"
+                android:text="0"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
@@ -175,6 +175,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/view" />-->
 
 
+
             <com.denzcoskun.imageslider.ImageSlider
                 android:id="@+id/coursel"
                 android:layout_width="match_parent"
@@ -268,7 +269,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="20dp">
+                    android:padding="20dp"
+                    android:visibility="gone">
 
                     <TextView
                         android:id="@+id/textView6"
@@ -357,6 +359,8 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
