Your orders updated

--- a/app/src/main/res/layout/your_orders_card.xml
+++ b/app/src/main/res/layout/your_orders_card.xml
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="2dp"
+                android:maxWidth="290sp"
                 android:text=" 05/01/2022"
                 tools:layout_editor_absoluteX="15dp"
                 tools:layout_editor_absoluteY="15dp" />
@@ -60,6 +61,7 @@
                 tools:layout_editor_absoluteX="15dp"
                 tools:layout_editor_absoluteY="15dp" />
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,6 +74,8 @@
                     android:layout_weight="1"
                     android:padding="2dp"
                     android:text="Pending"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Body2"
                     android:textColor="@color/teal_200" />
 
@@ -83,7 +87,7 @@
                     android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2" />
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/order_amt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Amt" />
