--- a/app/src/main/res/layout/activity_clinicaldocs.xml
+++ b/app/src/main/res/layout/activity_clinicaldocs.xml
@@ -7,7 +7,7 @@
     tools:context=".HealthRecords.clinicaldocs">
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar4"
+        android:id="@+id/docbackbtn"
         style="@style/Widget.MaterialComponents.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
         app:layout_constraintBottom_toTopOf="@+id/newdocument"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar4">
+        app:layout_constraintTop_toBottomOf="@+id/docbackbtn">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="match_parent"
